/**
 * Copyright 2022 RPMHub Revision Service @ https://github.com/rpmhub/revision
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package dev.rpmhub.revision.mappers.github;

import java.util.List;

public class ListWorkflow {

    private List<Run> workflow_runs;

    public List<Run> getWorkflow_runs() {
        return workflow_runs;
    }

    public void setWorkflow_runs(List<Run> workflow_runs) {
        this.workflow_runs = workflow_runs;
    }

    public Run getLatestRun() {
        return this.workflow_runs.get(0);
    }

}
